SJF funcionando 90% : falta tratar empates